unpackaged/main/default/objects/Case/fields/Closed_Date_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_Created_Date__c</fullName>
    <formula>ROUND( 8 * (
( 5 * FLOOR( ( DATEVALUE(  ClosedDate  ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( ClosedDate ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 8 * ( MOD( ClosedDate - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( CreatedDate) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 8 * ( MOD( CreatedDate - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1) ) )
)
)
),
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Date - Created Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>