unpackaged/main/default/objects/Case/fields/Closed_Month__c.field-meta.xml
<CustomField>
    <fullName>Closed_Month__c</fullName>
    <formula>CASE(
MONTH( DATEVALUE(ClosedDate) ), 
1, &quot;1. January&quot;, 
2, &quot;2. February&quot;,
3, &quot;3. March&quot;,
4, &quot;4. April&quot;, 
5, &quot;5. May&quot;,
6, &quot;6. June&quot;,
7, &quot;7. July&quot;,
8, &quot;8. August&quot;,
9, &quot;9. September&quot;,
10, &quot;10. October&quot;,
11, &quot;11. November&quot;,
12, &quot;12. December&quot;,
&quot;Not closed yet&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Month</label>
    <type>Text</type>
</CustomField>