unpackaged/main/default/objects/Case/fields/Closed_Notes__c.field-meta.xml
<CustomField>
    <fullName>Closed_Notes__c</fullName>
    <label>Closed Notes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed- Completed</fullName>
            </value>
            <value>
                <fullName>Closed- Declined</fullName>
            </value>
            <value>
                <fullName>Closed- Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>