unpackaged/main/default/objects/Case/fields/Closed_week__c.field-meta.xml
<CustomField>
    <fullName>Closed_week__c</fullName>
    <formula>IF( 

CEILING( ( DATEVALUE( ClosedDate ) - DATE( YEAR( DATEVALUE(ClosedDate) ), 1, 1) + 1) / 7) &gt; 52, 

52, 

CEILING( ( DATEVALUE(ClosedDate) - DATE( YEAR( DATEVALUE(ClosedDate) ), 1, 1) + 1) / 7) 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>