unpackaged/main/default/objects/Case/fields/Coldwell_Banker_Global_Luxury_Listing__c.field-meta.xml
<CustomField>
    <fullName>Coldwell_Banker_Global_Luxury_Listing__c</fullName>
    <label>Coldwell Banker Global Luxury Listing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>