unpackaged/main/default/objects/Case/fields/Coldwell_banker_office_name__c.field-meta.xml
<CustomField>
    <fullName>Coldwell_banker_office_name__c</fullName>
    <label>Coldwell banker office name</label>
    <type>TextArea</type>
</CustomField>