unpackaged/main/default/objects/Case/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent Fire</fullName>
            </value>
            <value>
                <fullName>Agent Image</fullName>
            </value>
            <value>
                <fullName>Boom Town!</fullName>
            </value>
            <value>
                <fullName>Brivity</fullName>
            </value>
            <value>
                <fullName>Curaytor</fullName>
            </value>
            <value>
                <fullName>Gabriels</fullName>
            </value>
            <value>
                <fullName>MoxiWorks</fullName>
            </value>
            <value>
                <fullName>Placester</fullName>
            </value>
            <value>
                <fullName>Real Estate Webmasters (REW)</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Brokerage</fullName>
            </value>
            <value>
                <fullName>No Competitor</fullName>
            </value>
            <value>
                <fullName>Commissions Inc</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>