unpackaged/main/default/objects/Case/fields/Considering_coming_back__c.field-meta.xml
<CustomField>
    <fullName>Considering_coming_back__c</fullName>
    <label>Considering coming back?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>