unpackaged/main/default/objects/Case/fields/Content_Creator__c.field-meta.xml
<CustomField>
    <fullName>Content_Creator__c</fullName>
    <formula>IF(
NOT(ISBLANK( Service_Schedule__c )),  
Service_Schedule__r.Content_Creator__r.FirstName + &quot; &quot; +  Service_Schedule__r.Content_Creator__r.LastName  ,
Service__r.Content_Creator__r.FirstName + &quot; &quot; +  Service__r.Content_Creator__r.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Content Creator</label>
    <type>Text</type>
</CustomField>