unpackaged/main/default/objects/Case/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <label>Coupon</label>
    <type>TextArea</type>
</CustomField>