unpackaged/main/default/objects/Case/fields/Credit_or_Refund_Applied__c.field-meta.xml
<CustomField>
    <fullName>Credit_or_Refund_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit or Refund Applied</label>
    <type>Checkbox</type>
</CustomField>