unpackaged/main/default/objects/Case/fields/Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type__c</fullName>
    <label>Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Full Month(s)</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>