unpackaged/main/default/objects/Case/fields/CRM_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Close_Date__c</fullName>
    <formula>IF(NOT(ISBLANK(Deployed_Start_Date__c)),Deployed_Start_Date__c ,ClosedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Close Date</label>
    <type>DateTime</type>
</CustomField>