unpackaged/main/default/objects/Case/fields/CSM_IM_Owner__c.field-meta.xml
<CustomField>
    <fullName>CSM_IM_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM/IM Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>