unpackaged/main/default/objects/Case/fields/Currently_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Currently_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently Escalated?</label>
    <type>Checkbox</type>
</CustomField>