unpackaged/main/default/objects/Case/fields/Currently_LP_Customer__c.field-meta.xml
<CustomField>
    <fullName>Currently_LP_Customer__c</fullName>
    <label>Currently LP Customer?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>