unpackaged/main/default/objects/Case/fields/CX_Description__c.field-meta.xml
<CustomField>
    <fullName>CX_Description__c</fullName>
    <label>CX Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>