unpackaged/main/default/objects/Case/fields/Days_in_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Current_Status__c</fullName>
    <formula>IF(  ISPICKVAL(Status, &quot;New&quot;) ,  TODAY() - DATEVALUE(CreatedDate) ,
IF( ISPICKVAL(Status, &quot;Discovery&quot;) , TODAY() - DATEVALUE(Discovery_Start_Date__c),
IF( ISPICKVAL(Status, &quot;Ready&quot;) , TODAY() - DATEVALUE(Ready_Start_Date__c),
IF( ISPICKVAL(Status, &quot;In Progress&quot;) , TODAY() - DATEVALUE(In_Progress_Start_Date__c),
IF( ISPICKVAL(Status, &quot;Review&quot;) , TODAY() - DATEVALUE(Review_Start_Date__c),
IF( ISPICKVAL(Status, &quot;Ready for UAT&quot;) , TODAY() - DATEVALUE(Ready_for_UAT_Start_Date__c),
IF( ISPICKVAL(Status, &quot;UAT&quot;) , TODAY() - DATEVALUE(UAT_Start_Date__c),
IF( ISPICKVAL(Status, &quot;Needs Deployment&quot;) , TODAY() - DATEVALUE(Needs_Deployment_Start_Date__c),
IF( ISPICKVAL(Status, &quot;Deployed&quot;) , TODAY() - DATEVALUE(Deployed_Start_Date__c),
IF( ISPICKVAL(Status, &quot;Closed&quot;) , TODAY() - DATEVALUE(Closed_Date__c), 0
))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the amount of days that happened since the Case is in the current Status.</inlineHelpText>
    <label>Days in Current Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>