unpackaged/main/default/objects/Case/fields/DC__c.field-meta.xml
<CustomField>
    <fullName>DC__c</fullName>
    <label>DC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DC1-2025</fullName>
            </value>
            <value>
                <fullName>DC2-2025</fullName>
            </value>
            <value>
                <fullName>DC3-2025</fullName>
            </value>
            <value>
                <fullName>DC4-2025</fullName>
            </value>
            <value>
                <fullName>DC5-2025</fullName>
            </value>
            <value>
                <fullName>DC6-2025</fullName>
            </value>
            <value>
                <fullName>DC7-2025</fullName>
            </value>
            <value>
                <fullName>DC8-2025</fullName>
            </value>
            <value>
                <fullName>DC1-2026</fullName>
            </value>
            <value>
                <fullName>DC2-2026</fullName>
            </value>
            <value>
                <fullName>DC3-2026</fullName>
            </value>
            <value>
                <fullName>DC4-2026</fullName>
            </value>
            <value>
                <fullName>DC5-2026</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>