unpackaged/main/default/objects/Case/fields/Decision_Memo__c.field-meta.xml
<CustomField>
    <fullName>Decision_Memo__c</fullName>
    <label>Decision Memo</label>
    <type>Url</type>
</CustomField>