unpackaged/main/default/objects/Case/fields/Delighted_Comment__c.field-meta.xml
<CustomField>
    <fullName>Delighted_Comment__c</fullName>
    <label>Delighted Comment</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>