unpackaged/main/default/objects/Case/fields/Delighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Delighted_Score__c</fullName>
    <label>Delighted Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>