unpackaged/main/default/objects/Case/fields/Deployed_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployed_End_Date__c</fullName>
    <label>Deployed End Date</label>
    <type>DateTime</type>
</CustomField>