unpackaged/main/default/objects/Case/fields/Deployed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployed_Start_Date__c</fullName>
    <label>Deployed Start Date</label>
    <type>DateTime</type>
</CustomField>