unpackaged/main/default/objects/Case/fields/Deployed_Time__c.field-meta.xml
<CustomField>
    <fullName>Deployed_Time__c</fullName>
    <formula>((5 * ( FLOOR( ( DATEVALUE( Deployed_End_Date__c  ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(Deployed_End_Date__c) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE( Deployed_Start_Date__c ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(Deployed_Start_Date__c) - DATE( 1900, 1, 8), 7 ) ) ))*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployed Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>