unpackaged/main/default/objects/Case/fields/Details_Page__c.field-meta.xml
<CustomField>
    <fullName>Details_Page__c</fullName>
    <inlineHelpText>Please let us know what updates you would like our team to make on the details page.</inlineHelpText>
    <label>Details Page</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>