unpackaged/main/default/objects/Case/fields/Details_Page_Assets__c.field-meta.xml
<CustomField>
    <fullName>Details_Page_Assets__c</fullName>
    <inlineHelpText>Please upload any assets needed to make the edits.</inlineHelpText>
    <label>Details Page Assets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>