unpackaged/main/default/objects/Case/fields/Difficulty_Level__c.field-meta.xml
<CustomField>
    <fullName>Difficulty_Level__c</fullName>
    <label>Difficulty Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Hard</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
            <value>
                <fullName>Endorsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>