unpackaged/main/default/objects/Case/fields/Director_Approved__c.field-meta.xml
<CustomField>
    <fullName>Director_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Director Approved</label>
    <type>Checkbox</type>
</CustomField>