unpackaged/main/default/objects/Case/fields/Director_Notes__c.field-meta.xml
<CustomField>
    <fullName>Director_Notes__c</fullName>
    <label>Director Notes</label>
    <type>TextArea</type>
</CustomField>