unpackaged/main/default/objects/Case/fields/Discovery_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_End_Date__c</fullName>
    <label>Discovery End Date</label>
    <type>DateTime</type>
</CustomField>