unpackaged/main/default/objects/Case/fields/Discovery_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Start_Date__c</fullName>
    <label>Discovery Start Date</label>
    <type>DateTime</type>
</CustomField>