unpackaged/main/default/objects/Case/fields/Do_Not_Send_Survey__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in decision logic to not send Delighted surveys</description>
    <label>Do Not Send Survey</label>
    <type>Checkbox</type>
</CustomField>