unpackaged/main/default/objects/Case/fields/Do_we_need_to_add_the_client_s_logo__c.field-meta.xml
<CustomField>
    <fullName>Do_we_need_to_add_the_client_s_logo__c</fullName>
    <label>Do we need to add the client&#39;s logo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>