unpackaged/main/default/objects/Case/fields/Documentation__c.field-meta.xml
<CustomField>
    <fullName>Documentation__c</fullName>
    <label>Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Update Current Documentation</fullName>
            </value>
            <value>
                <fullName>Create New Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>