unpackaged/main/default/objects/Case/fields/Documentation_Link__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Link__c</fullName>
    <label>Documentation Link</label>
    <type>Url</type>
</CustomField>