unpackaged/main/default/objects/Case/fields/Domain_LP_Website__c.field-meta.xml
<CustomField>
    <fullName>Domain_LP_Website__c</fullName>
    <label>Domain LP Website</label>
    <type>TextArea</type>
</CustomField>