unpackaged/main/default/objects/Case/fields/Domain_Register__c.field-meta.xml
<CustomField>
    <fullName>Domain_Register__c</fullName>
    <inlineHelpText>What is your domain register?
The provider you used to buy your domain, e.g. GoDaddy, Namecheap, or Network Solutions.</inlineHelpText>
    <label>Domain Register</label>
    <length>255</length>
    <type>Text</type>
</CustomField>