unpackaged/main/default/objects/Case/fields/Domain_Register_Password__c.field-meta.xml
<CustomField>
    <fullName>Domain_Register_Password__c</fullName>
    <inlineHelpText>What is your password for your domain register?
The password used to access your domain register.</inlineHelpText>
    <label>Domain Register Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>