unpackaged/main/default/objects/Case/fields/Domain_Register_Username__c.field-meta.xml
<CustomField>
    <fullName>Domain_Register_Username__c</fullName>
    <inlineHelpText>What is your username for your domain register?
Typically a username or your email address.</inlineHelpText>
    <label>Domain Register Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>