unpackaged/main/default/objects/Case/fields/Domain_registrar__c.field-meta.xml
<CustomField>
    <fullName>Domain_registrar__c</fullName>
    <label>Domain registrar</label>
    <type>TextArea</type>
</CustomField>