unpackaged/main/default/objects/Case/fields/Downloadable_files__c.field-meta.xml
<CustomField>
    <fullName>Downloadable_files__c</fullName>
    <label>Downloadable files</label>
    <type>TextArea</type>
</CustomField>