unpackaged/main/default/objects/Case/fields/Effort_Level__c.field-meta.xml
<CustomField>
    <fullName>Effort_Level__c</fullName>
    <label>Effort Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X-Small</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>X-Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>