unpackaged/main/default/objects/Case/fields/Enablement_Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Enablement_Collaboration__c</fullName>
    <label>Enablement Collaboration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>✅ Enablement not needed</fullName>
            </value>
            <value>
                <fullName>🔴 Enablement needed to deploy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>