unpackaged/main/default/objects/Case/fields/Enablement_Completion_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Enablement_Completion_Target_Date__c</fullName>
    <label>Enablement Completion Target Date</label>
    <type>Date</type>
</CustomField>