unpackaged/main/default/objects/Case/fields/EOS_Status__c.field-meta.xml
<CustomField>
    <fullName>EOS_Status__c</fullName>
    <label>EOS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>BUG</fullName>
            </value>
            <value>
                <fullName>STUCK</fullName>
            </value>
            <value>
                <fullName>SFA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>