unpackaged/main/default/objects/Case/fields/Estimated_Ops_Effort_Points__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Ops_Effort_Points__c</fullName>
    <label>Estimated Ops Effort Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>