unpackaged/main/default/objects/Case/fields/Facebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Name__c</fullName>
    <formula>Service_Schedule__r.Service__r.Facebook_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facebook Name</label>
    <type>Text</type>
</CustomField>