unpackaged/main/default/objects/Case/fields/FCS_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>FCS_Sandbox__c</fullName>
    <label>FCS Sandbox</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>