unpackaged/main/default/objects/Case/fields/Feedback_to_Data_Science__c.field-meta.xml
<CustomField>
    <fullName>Feedback_to_Data_Science__c</fullName>
    <label>Feedback to Data Science</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accurate</fullName>
            </value>
            <value>
                <fullName>Inaccurate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>