unpackaged/main/default/objects/Case/fields/First_Response_Agent__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Response Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>