unpackaged/main/default/objects/Case/fields/First_Response_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Created_Date__c</fullName>
    <formula>ROUND( 8 * (
   ( 5 * FLOOR( ( DATEVALUE(  First_Response_Time__c   ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( First_Response_Time__c ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD( First_Response_Time__c - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE(  CreatedDate  ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( CreatedDate) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( CreatedDate - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Response - Created Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>