unpackaged/main/default/objects/Case/fields/First_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Time__c</fullName>
    <label>First Response Time</label>
    <type>DateTime</type>
</CustomField>