unpackaged/main/default/objects/Case/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <formula>IMAGE(&quot;https://luxurypresence.file.force.com/servlet/servlet.FileDownload?file&quot; &amp; IF(
AND(  Now_Last_Update__c  &gt;60, ISNULL( First_Response_Time__c )),&quot;=015EY000000CKt0&quot;,
IF(
AND(  Now_Last_Update__c  &lt; 60, ISNULL( First_Response_Time__c )), &quot;=015EY000000CKt5&quot;,
IF(
AND( Has_Jira_Ticket_for__c  = true, Now_Last_Update__c&gt; 5040), &quot;=015EY000000CKt0&quot;,
IF(
AND(Has_Jira_Ticket_for__c = true, Now_Last_Update__c &gt; 4920, Now_Last_Update__c &lt; 5040 ),&quot;=015EY000000CKt5&quot;,
IF(
AND(Has_Jira_Ticket_for__c = true, Now_Last_Update__c &lt; 4920), &quot;=015EY000000CKtA&quot;,
IF(
AND(Has_Jira_Ticket_for__c = false,Now_Last_Update__c &gt; 720), &quot;=015EY000000CKt0&quot;,
IF(
AND(Has_Jira_Ticket_for__c = false,Now_Last_Update__c &gt; 600,Now_Last_Update__c &lt; 720), &quot;=015EY000000CKt5&quot;, &quot;=015EY000000CKtA&quot;
)
)
)
)
)
)
)
,&quot;Semaforo&quot;,20,20)</formula>
    <label>SLA Breach</label>
    <type>Text</type>
</CustomField>