unpackaged/main/default/objects/Case/fields/Flag_color__c.field-meta.xml
<CustomField>
    <fullName>Flag_color__c</fullName>
    <formula>IF(
AND(Has_Jira_ticket__c = true,(NOW()- Last_update__c)*24&gt;= 168), &quot;red&quot;,
IF(
AND(Has_Jira_ticket__c = true,(NOW()- Last_update__c)*24 &gt;= 166,(NOW()- Last_update__c)*24 &lt; 168 ), &quot;yellow&quot;,
IF(
AND(Has_Jira_ticket__c = true,(NOW()- Last_update__c)*24 &lt; 166), &quot;green&quot;,
IF(
AND(Has_Jira_ticket__c = false,(NOW()- Last_update__c)*24 &gt; 24), &quot;red&quot;,
IF(
AND(Has_Jira_ticket__c = false,(NOW()- Last_update__c)*24 &gt;= 22,(NOW()- Last_update__c)*24 &lt; 24 ), &quot;yellow&quot;,
IF(
AND(Has_Jira_ticket__c = false,(NOW()- Last_update__c)*24 &lt; 22), &quot;green&quot;, &quot;blank&quot;
)
)
)
)
)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag color</label>
    <type>Text</type>
</CustomField>