unpackaged/main/default/objects/Case/fields/For_QA_TP_Reporting__c.field-meta.xml
<CustomField>
    <fullName>For_QA_TP_Reporting__c</fullName>
    <label>For QA/ TP Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mark</fullName>
            </value>
            <value>
                <fullName>Done QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>