unpackaged/main/default/objects/Case/fields/Full_baths__c.field-meta.xml
<CustomField>
    <fullName>Full_baths__c</fullName>
    <label>Full baths</label>
    <length>10</length>
    <type>Text</type>
</CustomField>