unpackaged/main/default/objects/Case/fields/Full_length_video_url__c.field-meta.xml
<CustomField>
    <fullName>Full_length_video_url__c</fullName>
    <label>Full length video url</label>
    <type>TextArea</type>
</CustomField>