unpackaged/main/default/objects/Case/fields/GainApp_Workspace__c.field-meta.xml
<CustomField>
    <fullName>GainApp_Workspace__c</fullName>
    <formula>Service_Schedule__r.GainApp_Workspace__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GainApp Workspace</label>
    <type>Text</type>
</CustomField>