unpackaged/main/default/objects/Case/fields/Galery_section__c.field-meta.xml
<CustomField>
    <fullName>Galery_section__c</fullName>
    <label>Galery section</label>
    <type>TextArea</type>
</CustomField>