unpackaged/main/default/objects/Case/fields/GBP_Unresponsive__c.field-meta.xml
<CustomField>
    <fullName>GBP_Unresponsive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GBP - Unresponsive</label>
    <type>Checkbox</type>
</CustomField>