unpackaged/main/default/objects/Case/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Website Traffic</fullName>
            </value>
            <value>
                <fullName>Follows</fullName>
            </value>
            <value>
                <fullName>Brand Awareness</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>