unpackaged/main/default/objects/Case/fields/Half_baths__c.field-meta.xml
<CustomField>
    <fullName>Half_baths__c</fullName>
    <label>Half baths</label>
    <length>10</length>
    <type>Text</type>
</CustomField>