unpackaged/main/default/objects/Case/fields/Has_Asana_Task__c.field-meta.xml
<CustomField>
    <fullName>Has_Asana_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please mark checkbox if this ticket has an Asana task.</inlineHelpText>
    <label>Has Asana Task</label>
    <type>Checkbox</type>
</CustomField>