unpackaged/main/default/objects/Case/fields/Has_Asana_Task_for__c.field-meta.xml
<CustomField>
    <fullName>Has_Asana_Task_for__c</fullName>
    <formula>IF(
 
NOT(ISBLANK( Asana_Task__c )),true, false


)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Asana Task?</label>
    <type>Checkbox</type>
</CustomField>