unpackaged/main/default/objects/Case/fields/Has_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Has_Integrations__c</fullName>
    <label>Has Integrations</label>
    <type>TextArea</type>
</CustomField>