unpackaged/main/default/objects/Case/fields/Has_Jira_ticket__c.field-meta.xml
<CustomField>
    <fullName>Has_Jira_ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the case is dependent on a Jira Ticket</description>
    <inlineHelpText>Check if case is dependent of a ticket in Jira</inlineHelpText>
    <label>Has Jira ticket</label>
    <type>Checkbox</type>
</CustomField>