unpackaged/main/default/objects/Case/fields/Has_Jira_Ticket_for__c.field-meta.xml
<CustomField>
    <fullName>Has_Jira_Ticket_for__c</fullName>
    <formula>IF(

NOT(ISBLANK( Jira_Ticket__c )),true, false

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Jira Ticket?</label>
    <type>Checkbox</type>
</CustomField>