unpackaged/main/default/objects/Case/fields/Has_Zendesk_ticket__c.field-meta.xml
<CustomField>
    <fullName>Has_Zendesk_ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether this case exists also in Zendesk (used during migration)</description>
    <inlineHelpText>Please mark checkbox if this ticket exists in Zendesk</inlineHelpText>
    <label>Has Zendesk ticket</label>
    <type>Checkbox</type>
</CustomField>