unpackaged/main/default/objects/Case/fields/High_resolution_photos__c.field-meta.xml
<CustomField>
    <fullName>High_resolution_photos__c</fullName>
    <label>High resolution photos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>