unpackaged/main/default/objects/Case/fields/Homepage__c.field-meta.xml
<CustomField>
    <fullName>Homepage__c</fullName>
    <inlineHelpText>Please let us know what updates you would like our team to make on the homepage.</inlineHelpText>
    <label>Homepage</label>
    <type>TextArea</type>
</CustomField>