unpackaged/main/default/objects/Case/fields/Homepage_Assets__c.field-meta.xml
<CustomField>
    <fullName>Homepage_Assets__c</fullName>
    <inlineHelpText>Please upload any assets needed to make the edits.</inlineHelpText>
    <label>Homepage Assets</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>