unpackaged/main/default/objects/Case/fields/Impacted_Teams__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Teams__c</fullName>
    <label>Impacted Teams</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team</valueSetName>
    </valueSet>
</CustomField>